Routes and Data Relationships

--- a/config/config.json
+++ b/config/config.json
@@ -1,7 +1,7 @@
 {
   "development": {
-    "database": "development.db",
-    "storage": "development.db",
+    "database": "fsjstd-restapi.db",
+    "storage": "fsjstd-restapi.db",
     "dialect": "sqlite"
   },
   "test": {
